<resources>
    <string name="app_name">One</string>
    <string name="hello_blank_fragment">Привет от пустого фрагмента!</string>

    <string name="sport_title">Спорт</string>
    <string name="statistics_title">Статистика</string>
    <string name="profile_title">Профиль</string>

    <string name="settings_title">Настройки</string>

    <string name="run">Бег</string>
    <string name="pushUp">Анжумания</string>
    <string name="squat">Приседания</string>
    <string name="abs">Пресс</string>

    <string name="done">Готово</string>

    <string name="km">км</string>
    <string name="mile">миль</string>

    <string name="unit">раз</string>

    <!--IntroductionFragment-->
    <string name="next">Далее</string>
    <string name="skip">Готово</string>

    <string-array name="intro_titles">
        <item>Добро пожаловать в Даты</item>
        <item>2 вида дат</item>
        <item>Все нужные исторические термины</item>
    </string-array>

    <string-array name="intro_descriptions">
        <item>Уникальное приложение для изучения дат и терминов.</item>
        <item>Режимы Стандартный и Необходимый минимум отлично подойдут для разных целей обучения.</item>
        <item>515 терминов на все случаи жизни.</item>
    </string-array>

</resources>