<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/include_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/runTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/run"
            android:textColor="#4a4e51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.progressindicator.ProgressIndicator
            android:id="@+id/runProgressBar"
            style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:indeterminateOnly="false"
            android:max="10000"
            android:progress="0"
            app:indicatorColor="@color/run"
            app:indicatorCornerRadius="6dp"
            app:indicatorWidth="12dp"
            app:layout_constraintTop_toBottomOf="@id/runTitle" />

        <TextView
            android:id="@+id/pushUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/pushUp"
            android:textColor="#4a4e51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runProgressBar" />

        <com.google.android.material.progressindicator.ProgressIndicator
            android:id="@+id/pushUpProgressBar"
            style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:indeterminateOnly="false"
            android:max="10000"
            android:progress="0"
            app:indicatorColor="@color/pushUp"
            app:indicatorCornerRadius="6dp"
            app:indicatorWidth="12dp"
            app:layout_constraintTop_toBottomOf="@id/pushUpTitle" />

        <TextView
            android:id="@+id/squatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/squat"
            android:textColor="#4a4e51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pushUpProgressBar" />

        <com.google.android.material.progressindicator.ProgressIndicator
            android:id="@+id/squatProgressBar"
            style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:indeterminateOnly="false"
            android:max="10000"
            android:progress="0"
            app:indicatorColor="@color/squat"
            app:indicatorCornerRadius="6dp"
            app:indicatorWidth="12dp"
            app:layout_constraintTop_toBottomOf="@id/squatTitle" />

        <TextView
            android:id="@+id/absTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/abs"
            android:textColor="#4a4e51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/squatProgressBar" />

        <com.google.android.material.progressindicator.ProgressIndicator
            android:id="@+id/absProgressBar"
            style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Determinate"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:indeterminateOnly="false"
            android:max="10000"
            android:progress="0"
            app:indicatorColor="@color/abs"
            app:indicatorCornerRadius="6dp"
            app:indicatorWidth="12dp"
            app:layout_constraintTop_toBottomOf="@id/absTitle" />

        <TextView
            android:id="@+id/runResultNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="0.0"
            android:textColor="@color/run"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/pushUpResultNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/absProgressBar" />

        <TextView
            android:id="@+id/pushUpResultNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/pushUp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/squatResultNumber"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/runResultNumber"
            app:layout_constraintTop_toBottomOf="@id/absProgressBar" />

        <TextView
            android:id="@+id/squatResultNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/squat"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/absResultNumber"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/pushUpResultNumber"
            app:layout_constraintTop_toBottomOf="@id/absProgressBar" />

        <TextView
            android:id="@+id/absResultNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/abs"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/squatResultNumber"
            app:layout_constraintTop_toBottomOf="@id/absProgressBar" />

        <TextView
            android:id="@+id/runUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km"
            android:textColor="#4a4e51"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/runResultNumber"
            app:layout_constraintStart_toStartOf="@id/runResultNumber"
            app:layout_constraintTop_toBottomOf="@id/runResultNumber" />

        <TextView
            android:id="@+id/pushUpUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="#4a4e51"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/pushUpResultNumber"
            app:layout_constraintStart_toStartOf="@id/pushUpResultNumber"
            app:layout_constraintTop_toBottomOf="@id/pushUpResultNumber" />

        <TextView
            android:id="@+id/squatUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="#4a4e51"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/squatResultNumber"
            app:layout_constraintStart_toStartOf="@id/squatResultNumber"
            app:layout_constraintTop_toBottomOf="@id/squatResultNumber" />


        <TextView
            android:id="@+id/absUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="#4a4e51"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/absResultNumber"
            app:layout_constraintStart_toStartOf="@id/absResultNumber"
            app:layout_constraintTop_toBottomOf="@id/absResultNumber" />

        <TextView
            android:id="@+id/insertResultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Ваши результаты"
            android:textColor="#4a4e51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runUnit" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#e7e7e9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/insertResultTitle" />

        <ru.onanov.one.view.IncreaserView
            android:id="@+id/runIncreaser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <ru.onanov.one.view.IncreaserView
            android:id="@+id/pushUpIncreaser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runIncreaser" />

        <ru.onanov.one.view.IncreaserView
            android:id="@+id/squatIncreaser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pushUpIncreaser" />

        <ru.onanov.one.view.IncreaserView
            android:id="@+id/absIncreaser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/squatIncreaser" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>